[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Pause.gd" type="Script" id=1]
[ext_resource path="res://Sprites/ui_base.png" type="Texture" id=2]
[ext_resource path="res://ButtonTheme.tres" type="Theme" id=3]
[ext_resource path="res://Fonts/pausefont.tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 380, 363 )

[node name="PauseControl" type="Control"]
script = ExtResource( 1 )

[node name="Vignette" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 0.313726 )

[node name="Pause" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 700.0
margin_top = 250.0
margin_right = 1200.0
margin_bottom = 850.0
custom_styles/panel = SubResource( 1 )

[node name="ResumeButton" type="Button" parent="Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -120.0
margin_right = 175.0
margin_bottom = -20.0
theme = ExtResource( 3 )
text = "Retomar Partida"

[node name="ArenaSelectButton" type="Button" parent="Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = 20.0
margin_right = 175.0
margin_bottom = 120.0
theme = ExtResource( 3 )
text = "Seleção de Arenas"

[node name="QuitButton" type="Button" parent="Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = 160.0
margin_right = 175.0
margin_bottom = 260.0
theme = ExtResource( 3 )
text = "Voltar ao Menu"

[node name="PauseText" type="Label" parent="Pause"]
margin_left = 75.0
margin_top = 60.0
margin_right = 420.0
margin_bottom = 121.0
custom_fonts/font = ExtResource( 4 )
text = "PAUSA"
align = 1

